@@ -1,81 +1,97 @@
 package com.unicauca.muisca.application.service;
 
 import org.eclipse.emf.common.util.URI;
-import org.eclipse.emf.ecore.EPackage;
-import org.eclipse.emf.ecore.resource.Resource;
-import org.eclipse.emf.ecore.resource.ResourceSet;
-import org.eclipse.emf.ecore.resource.impl.ResourceSetImpl;
-import org.eclipse.emf.ecore.xmi.impl.EcoreResourceFactoryImpl;
-import org.eclipse.emf.ecore.xmi.impl.XMIResourceFactoryImpl;
-import org.eclipse.m2m.atl.engine.vm.AtlLauncher;
+import org.eclipse.m2m.atl.core.ATLCoreException;
+import org.eclipse.m2m.atl.core.IInjector;
+import org.eclipse.m2m.atl.core.IModel;
+import org.eclipse.m2m.atl.core.IReferenceModel;
+import org.eclipse.m2m.atl.core.emf.EMFInjector;
+import org.eclipse.m2m.atl.core.emf.EMFModel;
+import org.eclipse.m2m.atl.core.emf.EMFModelFactory;
+import org.eclipse.m2m.atl.engine.emfvm.launch.EMFVMLauncher;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.io.File;
+import java.io.FileInputStream;
+import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 @Service
 public class AtlService {
 
     public String executeTransformation(String transformationAsmPath,
-                                        String inputModelPath,
-                                        String inputMetamodelPath,
-                                        String outputMetamodelPath,
+                                        MultipartFile inputModelFile,
+                                        MultipartFile inputMetamodelFile,
+                                        MultipartFile outputMetamodelFile,
                                         String outputModelPath,
                                         String inputModelName,
                                         String outputModelName) {
         try {
-            // ✅ Registrar fábricas para .xmi y .ecore
-            Resource.Factory.Registry.INSTANCE.getExtensionToFactoryMap().put("xmi", new XMIResourceFactoryImpl());
-            Resource.Factory.Registry.INSTANCE.getExtensionToFactoryMap().put("ecore", new EcoreResourceFactoryImpl());
+            // Crear archivos temporales
+            File inputModel = File.createTempFile("inputModel_", ".xmi");
+            inputModelFile.transferTo(inputModel);
 
-            // Crear el ResourceSet
-            ResourceSet resourceSet = new ResourceSetImpl();
+            File inputMetamodel = File.createTempFile("inputMetamodel_", ".ecore");
+            inputMetamodelFile.transferTo(inputMetamodel);
 
-            // Cargar metamodelos
-            EPackage inputMetamodel = loadMetamodel(resourceSet, inputMetamodelPath);
-            EPackage outputMetamodel = loadMetamodel(resourceSet, outputMetamodelPath);
+            File outputMetamodel = File.createTempFile("outputMetamodel_", ".ecore");
+            outputMetamodelFile.transferTo(outputMetamodel);
 
-            // Registrar metamodelos globalmente
-            EPackage.Registry.INSTANCE.put(inputMetamodel.getNsURI(), inputMetamodel);
-            EPackage.Registry.INSTANCE.put(outputMetamodel.getNsURI(), outputMetamodel);
+            File outputModel = new File(outputModelPath);
+            outputModel.getParentFile().mkdirs();
 
-            // Cargar modelo de entrada y preparar modelo de salida
-            Resource inputModel = resourceSet.getResource(URI.createFileURI(inputModelPath), true);
-            Resource outputModel = resourceSet.createResource(URI.createFileURI(outputModelPath));
+            // Inicializar recursos EMF
+            EMFModelFactory modelFactory = new EMFModelFactory();
+            IInjector injector = new EMFInjector();
 
-            // Configurar ejecución ATL
+            // Cargar metamodelo de entrada
+            IReferenceModel inMetaModel = modelFactory.newReferenceModel();
+            injector.inject(inMetaModel, "file:///" + inputMetamodel.getAbsolutePath().replace("\\", "/"));
+
+            // Cargar metamodelo de salida
+            IReferenceModel outMetaModel = modelFactory.newReferenceModel();
+            injector.inject(outMetaModel, "file:///" + outputMetamodel.getAbsolutePath().replace("\\", "/"));
+
+            // Crear e inyectar modelo de entrada
+            IModel inModel = modelFactory.newModel(inMetaModel);
+            injector.inject(inModel, "file:///" + inputModel.getAbsolutePath().replace("\\", "/"));
+
+            // Crear modelo de salida vacío
+            IModel outModel = modelFactory.newModel(outMetaModel);
+
+            // Ejecutar transformación
+            EMFVMLauncher launcher = new EMFVMLauncher();
+            launcher.initialize(Collections.emptyMap());
+
+            launcher.addInModel(inModel, inputModelName, "IN");
+            launcher.addOutModel(outModel, outputModelName, "OUT");
+
             Map<String, Object> options = new HashMap<>();
             options.put("allowInterModelReferences", true);
 
-            AtlLauncher launcher = AtlLauncher.getDefault();
-
-            launcher.launch(
-                    new File(transformationAsmPath).toURI().toURL(),
-                    new HashMap<>(),
-                    Map.of(
-                            inputModelName, inputModel,
-                            outputModelName, outputModel
-                    ),
-                    new HashMap<>(),
-                    List.of(),
-                    options,
-                    null
-            );
+            try (FileInputStream asmInputStream = new FileInputStream(transformationAsmPath)) {
+                launcher.launch("run", null, options, asmInputStream);
+            }
 
             // Guardar el modelo de salida
-            outputModel.save(Map.of());
+            if (outModel instanceof EMFModel emfOutModel) {
+                emfOutModel.getResource().setURI(
+                        URI.createFileURI(outputModel.getAbsolutePath())
+                );
+                emfOutModel.getResource().save(Collections.emptyMap());
+                return "✅ Transformación completada exitosamente.";
+            } else {
+                return "❌ Error: El modelo de salida no es una instancia de EMFModel.";
+            }
 
-            return "✅ Transformación completada exitosamente.";
+        } catch (ATLCoreException e) {
+            e.printStackTrace();
+            return "❌ Error ATL: " + e.getMessage();
         } catch (Exception e) {
             e.printStackTrace();
-            return "❌ Error durante la transformación: " + e.getMessage();
+            return "❌ Error general: " + e.getMessage();
         }
-    }
-
-    private EPackage loadMetamodel(ResourceSet resourceSet, String metamodelPath) throws Exception {
-        Resource metamodelResource = resourceSet.getResource(URI.createFileURI(metamodelPath), true);
-        return (EPackage) metamodelResource.getContents().get(0);
     }
 }
